@@ -4,5 +4,7 @@ if RUN_TESTS
   BUILT_SOURCES = e2.lin.nc e2.nonlin.nc
 endif
 
+CLEANFILES = $(BUILT_SOURCES)
+
 .config.nc::
 	../src/python/glide_launch.py --prefix=.. --src $<
